--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "NotionPaper",
-  "version": "0.0.1",
+  "name": "NotionBook",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "dev": "astro dev --host",
@@ -10,7 +10,6 @@
     "astro": "astro"
   },
   "devDependencies": {
-    "@astrojs/image": "^0.17.2",
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^2.0.1",
@@ -22,6 +21,8 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^6.8.0",
+    "@astrojs/netlify": "^2.6.0",
     "@astrojs/node": "^5.3.0",
     "@astrojs/partytown": "^1.2.3",
     "@astrojs/vercel": "^3.7.4",
