some feature added and bug fixed

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
+# For configuration, please check https://nb.dreambualre.com
 DATABASE_ID = 'xxxxx'
 NOTION_TOKEN = 'secret_xxxxx'
-GOOGLE_ANALYTICS = 'UA-xxxxxxx-3'
+GOOGLE_ANALYTICS = 'G-xxxxxxxx'
 THEME = 'daisyui'
