--- a/package.json
+++ b/package.json
@@ -11,27 +11,31 @@
   },
   "devDependencies": {
     "@astrojs/mdx": "^0.19.7",
-    "@astrojs/rss": "^2.4.3",
-    "@astrojs/sitemap": "^2.0.1",
+    "@astrojs/rss": "^2.4.4",
+    "@astrojs/sitemap": "^2.0.2",
     "@tailwindcss/typography": "^0.5.9",
-    "astro": "^2.9.6",
-    "autoprefixer": "^10.4.14",
-    "daisyui": "^3.5.0",
-    "postcss": "^8.4.27",
+    "astro": "^2.10.12",
+    "autoprefixer": "^10.4.15",
+    "daisyui": "^3.5.1",
+    "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^6.8.0",
     "@astrojs/netlify": "^2.6.0",
-    "@astrojs/node": "^5.3.0",
+    "@astrojs/node": "^5.3.5",
     "@astrojs/partytown": "^1.2.3",
-    "@astrojs/vercel": "^3.7.4",
-    "@rollup/plugin-dynamic-import-vars": "^2.0.4",
+    "@astrojs/prism": "^2.1.2",
+    "@astrojs/vercel": "^3.8.2",
+    "@rollup/plugin-dynamic-import-vars": "^2.0.5",
+    "astro-google-analytics": "^1.0.3",
+    "astro-seo": "^0.7.6",
     "fs-extra": "^11.1.1",
     "nanostores": "^0.9.3",
     "nodejs-file-downloader": "^4.12.1",
-    "sass": "^1.64.1",
-    "sharp": "^0.32.4",
+    "sass": "^1.66.1",
+    "sharp": "^0.32.5",
+    "shiki": "^0.14.3",
     "uuid": "^9.0.0"
   }
 }
